--- a/content/posts/contextual-callouts-with-css-grid.mdx
+++ b/content/posts/contextual-callouts-with-css-grid.mdx
@@ -1,4 +1,5 @@
 ---
+templateKey: post
 slug: contextual-callouts-with-css-grid
 date: 2017-08-10T20:17:00.000Z
 title: Contextual Callouts with CSS Grid
@@ -11,6 +12,10 @@ tags:
   - layout
 ---
 At long last, contextual callouts are possible with CSS grid. Contextual callouts are small paragraphs that sit beside primary text and offer secondary information to a reader. They have long been a feature of books, magazines and other printed materials. I particularly enjoy coming across these small asides when reading, as they add texture and interest to the content.
+
+<aside>
+  <p>This is an aside note with two lines in it</p>
+</aside>
 
 I have been searching for a while now for a way to bring these to the web with pure CSS. The solutions in the past have typically been fairly messy, requiring annoying floats and clearing, or manual absolute positioning. That is changing now, thanks to CSS grid.
 
@@ -40,7 +45,7 @@ Say I’m building a blog post template. I’ll need a header to contain the tit
 
 The article element contains the header, share links aside, and all post content as direct children. This will be important as we apply CSS grid styles to the post. Callouts are written as `aside` elements, perfect for content that is connected tangentially to the rest of the document, and appear in the document directly after the paragraph they are connected to.
 
-## Fallback Styling (if no CSS Grid support)
+## Fallback Styling
 
 First, we’ll apply some basic styles for browsers that don’t yet support CSS grid. We’ll add some margin, padding and set a max-width of 70 characters using the `ch` unit:
 
@@ -52,7 +57,7 @@ First, we’ll apply some basic styles for browsers that don’t yet support CSS
 }
 ```
 
-## The Fun Part: Using CSS Grid!
+## Using CSS Grid
 
 Now, progressively enhance for browsers that do support CSS grid using an `@supports` query:
 
@@ -94,6 +99,10 @@ Now, the post header, post paragraphs and headings, and share links all sit next
   grid-column-end: 5;
 }
 ```
+
+<aside>
+  <p>This is an aside note with two lines in it</p>
+</aside>
 
 The asides are now pulled to the left of the paragraph immediately preceding them, looking exactly like callouts. If you wanted more control over the positioning of these callouts (say you wanted one at the _bottom_ of the row, rather than at the top), you could apply some targeted styling with the `align-self` property, but for this exercise, I’m assuming a more generic approach for content generated from a CMS.
 
