--- a/content/posts/advanced-css-only-form-styling.mdx
+++ b/content/posts/advanced-css-only-form-styling.mdx
@@ -25,8 +25,14 @@ Here I am hiding the label until the user types in the input, thus hiding the pl
 
 ```html
 <div class="form-group">
-  <input type="text" id="dynamic-label-input" placeholder="Enter some text">
-  <label for="dynamic-label-input">Enter some text</label>
+  <input
+    type="text"
+    id="dynamic-label-input"
+    placeholder="Enter some text"
+  >
+  <label for="dynamic-label-input">
+    Enter some text
+  </label>
 </div>
 ```
 
