--- a/content/posts/better-typography-with-font-variants.mdx
+++ b/content/posts/better-typography-with-font-variants.mdx
@@ -15,7 +15,15 @@ However, this is quickly changing thanks to the increasing availability of OpenT
 
 This article is an overview of how to control OpenType features using CSS, but remember that whatever web font you are using will also need to support these features.
 
-## The font-variant- Properties for Advanced Typography
+<ul>
+  <li><a href="#font-variant-ligatures">font-variant-ligatures</a></li>
+  <li><a href="#font-variant-position">font-variant-position</a></li>
+  <li><a href="#font-variant-caps">font-variant-caps</a></li>
+  <li><a href="#font-variant-numeric">font-variant-numeric</a></li>
+  <li><a href="#font-variant-alternates">font-variant-alternates</a></li>
+</ul>
+
+## The font-variant- Properties
 
 You can control most OpenType features using various properties beginning with `font-variant-`. There is also a low-level property `font-feature-settings` which can be used to support legacy browsers. Whenever possible, however, you should use the more modern `font-variant` properties. One solution is to use an `@supports` rule to check if a font-variant property is supported and otherwise use `font-feature-settings`.
 
@@ -35,11 +43,6 @@ body {
 ## font-variant-ligatures
 
 Ligatures are single glyphs made from two or more characters. They typically prevent ugly or awkward letter collisions and, therefore, aid legibility.
-
-| Syntax | Description |
-| ----------- | ----------- |
-| common-ligatures | `font-variant-ligatures: common-ligatures;` |
-| discretionary-ligatures | `font-variant-ligatures: discretionary-ligatures;` |
 
 ### common-ligatures
 
@@ -545,7 +548,7 @@ font-feature-settings: nalt 1; /* low-level enable */
 font-feature-settings: nalt 0; /* low-level disable */
 ```
 
-## Further Web Typography Resources
+## More Resources
 
 There is a huge amount to learn about typography on the web including font variants and much more. Check out the following excellent resources for more information:
 
