--- a/content/posts/controlling-element-visibility-with-the-intersection-observer-api.mdx
+++ b/content/posts/controlling-element-visibility-with-the-intersection-observer-api.mdx
@@ -2,7 +2,7 @@
 templateKey: post
 slug: controlling-element-visibility-with-the-intersection-observer-api
 date: 2017-10-18T20:17:00.000Z
-title: Controlling Element Visibility with the Intersection Observer API
+title: Controlling Element Visibility with Intersection Observers
 description: >-
   Learn how to use the new IntersectionObserver API to control the visibility of elements relative to the viewport.
 tags:
@@ -107,7 +107,5 @@ switch (true) {
     return;
 }
 ```
-
-## Conclusion
 
 The Intersection Observer API provides a more straightforward and powerful method for checking element visibility relative to the viewport. Hopefully browser support continues to improve and we’ll be able to use it soon in production sites without needing a polyfill.
