--- a/content/posts/semantic-image-overlays-with-object-fit.mdx
+++ b/content/posts/semantic-image-overlays-with-object-fit.mdx
@@ -104,4 +104,4 @@ It’s almost identical, only that now we’re using the `figure` element to con
 
 ## Browser Support of object-fit
 
-Currently `object-fit` is not supported in IE or Edge, but there is a simple [polyfill](https://medium.com/@primozcigler/neat-trick-for-css-object-fit-fallback-on-edge-and-other-browsers-afbc53bbb2c3) you can use to convert the image to a background-image in those browsers.
+Currently `object-fit` is not supported in IE or Edge, but there is a [simple polyfill](https://medium.com/@primozcigler/neat-trick-for-css-object-fit-fallback-on-edge-and-other-browsers-afbc53bbb2c3) you can use to convert the image to a background-image in those browsers.
