--- a/content/posts/unlocking-the-benefits-of-css-custom-properties.mdx
+++ b/content/posts/unlocking-the-benefits-of-css-custom-properties.mdx
@@ -11,7 +11,7 @@ tags:
 ---
 More and more developers are starting to use CSS variables, or as they are more correctly known, custom properties. Native CSS custom properties provide several clear benefits over preprocessor variables. They provide the power to achieve things like live theming which were previously much more difficult.
 
-I want to take a quick look at the benefits of CSS custom properties and go over some lesser known features that may come in handy.
+I want to take a quick look at the benefits of CSS *custom properties* and go over some lesser known features that may come in handy.
 
 ## Benefits of CSS Custom Properties
 
