--- a/content/posts/component-reusability-in-react-vue.mdx
+++ b/content/posts/component-reusability-in-react-vue.mdx
@@ -403,7 +403,7 @@ class App extends React.Component {
 }
 ```
 
-## Observers (resize, intersection, etc.)
+### Observers (resize, intersection, etc.)
 
 You can also use render props/scoped slots to create a component that acts as a wrapper around resize or intersection observers. This component can simply expose the current size or intersection point of an element to a parent component. You can then perform whatever logic you need based on that data in the parent, preserving a nice separation of concerns.
 
