--- a/content/posts/live-theming-with-css-variables.mdx
+++ b/content/posts/live-theming-with-css-variables.mdx
@@ -13,9 +13,9 @@ CSS variables, now enjoying fairly good [browser support](https://caniuse.com/#s
 
 The process is fairly simple—setup initial variable values in CSS, markup some inputs, add event listeners and set the values in JavaScript. Let’s get started!
 
-<figure>
-  <img src="https://via.placeholder.com/800x400" alt="test"/>
-  <figcaption>Test</figcaption>
+<figure className="lg:-ml-24 lg:-mr-24">
+  <img src="../../assets/live-theming.svg" alt=""/>
+  <figcaption className="lg:ml-24 lg:mr-24">Test</figcaption>
 </figure>
 
 ## Set Up Initial Values
