--- a/content/posts/live-theming-with-css-variables.mdx
+++ b/content/posts/live-theming-with-css-variables.mdx
@@ -14,7 +14,7 @@ CSS variables, now enjoying fairly good [browser support](https://caniuse.com/#s
 The process is fairly simple—setup initial variable values in CSS, markup some inputs, add event listeners and set the values in JavaScript. Let’s get started!
 
 <figure className="lg:-ml-24 lg:-mr-24">
-  <img src="../../assets/live-theming.svg" alt=""/>
+  <img src="../../assets/live-theming.png" alt=""/>
   <figcaption className="lg:ml-24 lg:mr-24">
     An editor for customizing the colors and typography of a layout, built with simple JavaScript and CSS variables.
   </figcaption>
