--- a/content/posts/semantic-image-overlays-with-object-fit.mdx
+++ b/content/posts/semantic-image-overlays-with-object-fit.mdx
@@ -11,6 +11,10 @@ tags:
 ---
 Think of how many times you have coded a grid of images with an overlay that appears on hover and displays some sort of text. With the `object-fit` property getting wider support, there is now a clean, semantic way of doing this.
 
+<figure>
+  <img src="../../assets/semantic-image-overlays.png" alt=""/>
+</figure>
+
 ## The Old Way (without `object-fit`)
 
 Here’s how I used to accomplish this:
