--- a/content/posts/whats-the-deal-with-margin-collapse.mdx
+++ b/content/posts/whats-the-deal-with-margin-collapse.mdx
@@ -20,7 +20,7 @@ The key is understanding when two margins are adjoining. Here are the basic situ
 ### Sibling Elements
 
 <figure>
-  <img src="https://via.placeholder.com/800x400" alt="test"/>
+  <img src="../../assets/sibling-elements.png" alt="test"/>
   <figcaption>Test</figcaption>
 </figure>
 
@@ -29,14 +29,14 @@ The bottom margin of an element collapses with the top margin of its proceeding 
 ### Child Elements
 
 <figure>
-  <img src="https://via.placeholder.com/800x400" alt="test"/>
+  <img src="../../assets/child-elements-top.png" alt="test"/>
   <figcaption>Test</figcaption>
 </figure>
 
 The top margin of an element collapses with the top margin of its first child element.
 
 <figure>
-  <img src="https://via.placeholder.com/800x400" alt="test"/>
+  <img src="../../assets/child-elements-bottom.png" alt="test"/>
   <figcaption>Test</figcaption>
 </figure>
 
