--- a/content/posts/advanced-css-only-form-styling.mdx
+++ b/content/posts/advanced-css-only-form-styling.mdx
@@ -59,7 +59,7 @@ input:placeholder-shown + label {
 ## :required
 
 <figure>
-  <img src="https://via.placeholder.com/800x400" alt="test"/>
+  <img src="../../assets/required.png" alt="test"/>
   <figcaption>Test</figcaption>
 </figure>
 
@@ -80,7 +80,7 @@ input:required + .help-text::before {
 ## :optional
 
 <figure>
-  <img src="https://via.placeholder.com/800x400" alt="test"/>
+  <img src="../../assets/optional.png" alt="test"/>
   <figcaption>Test</figcaption>
 </figure>
 
