--- a/content/posts/better-typography-with-font-variants.mdx
+++ b/content/posts/better-typography-with-font-variants.mdx
@@ -47,7 +47,7 @@ Ligatures are single glyphs made from two or more characters. They typically pre
 ### common-ligatures
 
 <figure>
-  <img src="https://via.placeholder.com/800x400" alt="test"/>
+  <img src="../../assets/common-ligatures.png" alt="test"/>
   <figcaption>Test</figcaption>
 </figure>
 
@@ -64,7 +64,7 @@ font-feature-settings: 'liga' 0; /* low-level disable */
 ### discretionary-ligatures
 
 <figure>
-  <img src="https://via.placeholder.com/800x400" alt="test"/>
+  <img src="../../assets/discretionary-ligatures.png" alt="test"/>
   <figcaption>Test</figcaption>
 </figure>
 
