--- a/content/posts/controlling-element-visibility-with-the-intersection-observer-api.mdx
+++ b/content/posts/controlling-element-visibility-with-the-intersection-observer-api.mdx
@@ -45,7 +45,7 @@ I have a simple grid of cards that is styled using CSS grid:
 I loop over each card and create an observer. The observer accepts a callback and an options object. Note that in options I am setting the `rootMargin` to a negative value. This insets the intersection point in from the viewport on all sides by 100px. So a card can be up to 100px in the viewport before the observer will read it as intersected.
 
 <figure>
-  <img src="https://via.placeholder.com/800x400" alt="test"/>
+  <img src="../../assets/root-margin.png" alt="test"/>
   <figcaption>Test</figcaption>
 </figure>
 
