--- a/content/posts/component-reusability-in-react-vue.mdx
+++ b/content/posts/component-reusability-in-react-vue.mdx
@@ -15,7 +15,7 @@ One of the issues all front-end developers face is how to make UI components reu
 Let’s say we are building an autocomplete component:
 
 <figure>
-  <img src="https://via.placeholder.com/800x400" alt="test"/>
+  <img src="../../assets/autocomplete.png" alt=""/>
   <figcaption>Test</figcaption>
 </figure>
 
