--- a/content/posts/component-variants-with-scoped-css-variables.mdx
+++ b/content/posts/component-variants-with-scoped-css-variables.mdx
@@ -13,6 +13,11 @@ Generating variants of common interface components like buttons, inputs, cards, 
 
 Let’s take creating buttons as an example. I want to replicate the familiar set of buttons made popular by Bootstrap and similar frameworks that includes primary, secondary, success, danger, warning, info, light and dark variants.
 
+<figure>
+  <img src="../../assets/component-variants.png" alt=""/>
+  <figcaption>Test</figcaption>
+</figure>
+
 ## Base Styling
 
 I’m going to start by giving these buttons some base styling. I can give the button a base class and then add additional classes for each variant.
