--- a/content/posts/controlling-element-visibility-with-the-intersection-observer-api.mdx
+++ b/content/posts/controlling-element-visibility-with-the-intersection-observer-api.mdx
@@ -4,7 +4,7 @@ slug: controlling-element-visibility-with-the-intersection-observer-api
 date: 2017-10-18T20:17:00.000Z
 title: Controlling Element Visibility with Intersection Observers
 description: >-
-  Learn how to use the new IntersectionObserver API to control the visibility of elements relative to the viewport.
+  Learn how to use the IntersectionObserver API to control the visibility of elements relative to the viewport.
 tags:
   - javascript
 ---
