--- a/content/posts/component-variants-with-scoped-css-variables.mdx
+++ b/content/posts/component-variants-with-scoped-css-variables.mdx
@@ -4,23 +4,23 @@ slug: component-variants-with-scoped-css-variables
 date: 2017-10-12T20:17:00.000Z
 title: Component Variants with Scoped CSS Variables
 description: >-
-  Scoped CSS variables provide an incredibly easy and clean way to create variants of common interface components like buttons.
+  Scoped CSS variables provide an easy and clean way to create variants of common interface components like buttons.
 tags:
   - css
   - theming
 ---
 Generating variants of common interface components like buttons, inputs, cards, etc., has typically involved multiple class names, pre-processor mixins, or repeated code. Now, component variants can be created in a clean and straightforward manner using CSS variables.
 
-Let’s take creating buttons as an example. I want to replicate the familiar set of buttons made popular by Bootstrap and similar frameworks that includes primary, secondary, success, danger, warning, info, light and dark variants.
+Let’s take buttons as an example. I want to create a set of different buttons, including common variants like "primary" and "secondary".
 
 <figure>
   <img src="../../assets/component-variants.png" alt=""/>
-  <figcaption>Test</figcaption>
+  <figcaption>A common use case for component variants: button styles.</figcaption>
 </figure>
 
 ## Base Styling
 
-I’m going to start by giving these buttons some base styling. I can give the button a base class and then add additional classes for each variant.
+I’m going to start by giving these buttons some base styling. I can give the `button` a base class and then add additional classes for each variant.
 
 ```html
 <button class="button is-primary">Primary</button>
@@ -41,13 +41,13 @@ I’m going to start by giving these buttons some base styling. I can give the b
 
 ## Defining Variables
 
-Next I’m going to define some variables on the root. These will be the properties that need to change with each variant.
+Next, I’m going to define some variables on the `:root`. These will be the properties that need to change with each variant.
 
 ```css
 :root {
-  --button-border-color: gray;
-  --button-text-color: white;
   --button-background-color: gray;
+  --button-border-color: gray;
+  --button-text-color: black;
 }
 ```
 
@@ -56,9 +56,9 @@ I will use these to add color to my base styling:
 ```css
 .button {
   /* ... */
+  background-color: var(--button-background-color);
   border: 1px solid var(--button-border-color);
   color: var(--button-text-color);
-  background-color: var(--button-background-color);
 }
 ```
 
@@ -68,18 +68,16 @@ Finally, I will override these variable values within each variant selector.
 
 ```css
 .button.is-primary {
-  --button-border-color: #0069d9;
+  --button-background-color: orange;
+  --button-border-color: orange;
   --button-text-color: white;
-  --button-background-color: #0069d9;
 }
 
 .button.is-secondary {
-  --button-border-color: #727b84;
+  --button-background-color: black;
+  --button-border-color: black;
   --button-text-color: white;
-  --button-background-color: #727b84;
 }
-
-/* ... */
 ```
 
 ## Alternate Selector Scheme
@@ -101,41 +99,31 @@ Here I’m nesting variant selectors with PostCSS:
   width: auto;
   height: 2.5rem;
   padding: 0 1rem;
+  background-color: var(--button-background-color);
   border: 1px solid var(--button-border-color);
   border-radius: 4px;
   color: var(--button-text-color);
-  background-color: var(--button-background-color);
 
   &[class*='primary'] {
-    --button-border-color: #0069d9;
+    --button-background-color: orange;
+    --button-border-color: orange;
     --button-text-color: white;
-    --button-background-color: #0069d9;
   }
 
   &[class*='secondary'] {
-    --button-border-color: #727b84;
+    --button-background-color: black;
+    --button-border-color: black;
     --button-text-color: white;
-    --button-background-color: #727b84;
   }
-
-  /* ... */
 }
 ```
 
 ## Browser Support for CSS Variables
 
-For browsers that do not support custom properties at all, you can use the [PostCSS custom properties](https://github.com/postcss/postcss-custom-properties) plugin. This will compile the CSS variables as static values.
+For browsers that do not support custom properties, you can use the [PostCSS custom properties](https://github.com/postcss/postcss-custom-properties) plugin. This will compile the CSS variables as static values.
 
-Keep in mind, however, that this will not allow you to override variable values, as the variables will no longer exist in the browser, having already been evaluated during the CSS build.
+Keep in mind, however, that this will not allow you to override the variable values, as the variables will no longer exist in the browser, having already been evaluated during the CSS build.
 
 The technique for component variants described in this article is future-looking and, as more and more browsers fully support custom properties, will be able to be used in production sites.
-
-## Get a Quick Start with HiQ
-
-My new [CSS framework HiQ](https://jonathanharrell.github.io/hiq/) lets you get started quickly by providing variables that you can customize and then override within your variant selectors. Check out the [Buttons](https://jonathanharrell.github.io/hiq/guide/buttons.html) section for an example.
-
-In addition, you can use the [theme builder](https://hiq-theme-builder.netlify.com/) for a visual editing experience as you customize your own theme.
-
-HiQ is lightweight and provides truly fluid typography that changes in relation to the viewport width. It is built using PostCSS and can be integrated into your own project as a single static file, or as part of your own PostCSS build.
 
 You can learn more about CSS variables in [my article here](/unlocking-the-benefits-of-css-custom-properties).
