--- a/content/posts/live-theming-with-css-variables.mdx
+++ b/content/posts/live-theming-with-css-variables.mdx
@@ -4,14 +4,14 @@ slug: live-theming-with-css-variables
 date: 2017-08-19T20:17:00.000Z
 title: Live Theming with CSS Variables
 description: >-
-  CSS variables are opening up exciting new possibilities, like creating a very performant live theme editor that dynamically updates CSS values.
+  CSS variables are opening up exciting new possibilities, like creating a performant live theme editor that dynamically updates CSS values.
 tags:
   - css
   - theming
 ---
-CSS variables, now enjoying fairly good [browser support](https://caniuse.com/#search=css%20variables), are opening up exciting possibilities for more dynamic styling. Having true CSS variables means that we can get and set their values in JavaScript, allowing us to build cool features like live theming.
+CSS variables, now enjoying fairly good [browser support](https://caniuse.com/#search=css%20variables), are opening up exciting possibilities for more dynamic styling. Having true CSS variables means that we can get and set their values using JavaScript, allowing us to build exciting features like live theming.
 
-The process is fairly simple—setup initial variable values in CSS, markup some inputs, add event listeners and set the values in JavaScript. Let’s get started!
+The process is fairly simple—set up initial variable values in CSS, mark up some inputs, add event listeners and set the values in JavaScript. Let’s get started!
 
 <figure className="lg:-ml-24 lg:-mr-24">
   <img src="../../assets/live-theming.png" alt=""/>
@@ -22,20 +22,20 @@ The process is fairly simple—setup initial variable values in CSS, markup some
 
 ## Set Up Initial Values
 
-First we’ll set up the variables and their initial values in the `:root` pseudo-selector:
+First we’ll set up the variables and their initial values in the `:root` pseudo-class. In HTML, `:root` represents the `html` element.
 
 ```css
 :root {
-  --background-color: #2eec96;
-  --text-color: #222;
-  --label-color: #1a905d;
-  --border-color: rgba(250, 250, 250, 0.5);
-  --base-font-size: 14px;
-  --base-line-height: 1.6;
+  --background-color: #FFFFFF;
+  --text-color: #101727;
+  --label-color: #E77C00;
+  --border-color: #D1D5DC;
+  --base-font-size: 16px;
+  --base-line-height: 1.5;
 }
 ```
 
-Write some styles using these variables. Think about using these values as a base and generating many of the other values in your styles from them. For example, set your `body` to use the `--base-font-size` variable and set all other font sizes in rems or ems. This will let you create fewer variables while still giving the user the power to affect the entire document.
+Now we can write some styles using these variables. Think about using these values as a base and generating other values in your styles from them. For example, set your `body` to use the `--base-font-size` variable and set all other font sizes in rems or ems. This will let you create fewer variables while still giving the user the power to affect the entire document.
 
 ```css
 body {
@@ -46,14 +46,14 @@ body {
 }
 ```
 
-You may also want to add some transitions for the specific properties that will be changing to smooth out the theme editing experience.
+You may also want to add some transitions for the properties that will be changing to smooth out the theme editing experience.
 
 ## Create Some Inputs
 
-Now it’s time to create the form the user will be interacting with to customize their theme. I’m using color inputs for the color options and range inputs for the font size and line height.
+Now it’s time to create the form that the user will be interacting with to customize their theme. I’m using color inputs for the color options and range inputs for the font size and line height.
 
 ```html
-<input type="color" id="background-color" value="#2eec96">
+<input type="color" id="background-color" value="#FFFFFF">
 <input type="range" id="base-font-size" min="12" max="16" step="1" value="14">
 ```
 
@@ -61,7 +61,7 @@ Set your initial input values to match the starting values of your CSS variables
 
 ## Set up Event Listeners
 
-I’m setting up listeners to the “change” event for color inputs, and the “input” event for range inputs. I’ve extracted the logic to a separate function called handleInputChange so I can reuse it for all the inputs. A small complication is the need to set `--base-font-size` in pixels and everything else in unitless values. So `handleInputChange` accepts a second parameter that is a simple Boolean to handle this.
+I’m setting up listeners for the “change” event for color inputs, and the “input” event for range inputs. I’ve extracted the logic to a separate function called `handleInputChange` so that I can reuse it for all the inputs. A small complication is the need to set `--base-font-size` in pixels and everything else in unitless values. So `handleInputChange` accepts a second parameter that is a simple boolean to handle this.
 
 ```javascript
 const handleInputChange = (property, pixels) => {
@@ -71,12 +71,12 @@ const handleInputChange = (property, pixels) => {
   );
 };
 
-document.querySelector('#background-color')
+document.getElementById('background-color')
   .addEventListener('change', event => {
     handleInputChange('background-color', false);
   });
 
-document.querySelector('#base-font-size')
+document.getElementById('base-font-size')
   .addEventListener('input', event => {
     handleInputChange('base-font-size', true);
   });
@@ -84,24 +84,24 @@ document.querySelector('#base-font-size')
 
 That’s all it takes to set up basic interactive theming with CSS variables. We can go a step further and keep these values in localStorage so the theme settings will persist on refresh.
 
-## Store Values in `localStorage`
+## Store Values in localStorage
 
-I’ll edit my `handleInputChange` function to store values in localStorage:
+I’ll edit my `handleInputChange` function to store values in `localStorage`:
 
 ```javascript
 const handleInputChange = (property, pixels) => {
+  const newValue = `${event.target.value}${pixels ? 'px' : ''}`;
+
   document.documentElement.style.setProperty(
     `--${property}`,
-    `${event.target.value}${pixels ? 'px' : ''}`
+    newValue
   );
-  localStorage.setItem(
-    property,
-    `${event.target.value}${pixels ? 'px' : ''}`
-  );
+
+  localStorage.setItem(property, newValue);
 };
 ```
 
-Next, I’ll need to add some functionality to grab the values from localStorage and set them on page load. I will need to set the CSS variable and the input value so everything is consistent. Once again, I’ve extracted the logic to a separate function. And again, be careful of pixel values. This time, when setting the input values, the ‘px’ string will need to be removed.
+Next, I’ll need to add some functionality to grab the values from `localStorage` and set them on page load. I will need to set both the CSS variable and the input value so that everything is consistent. Once again, I’ve extracted the logic to a separate function. And again, be careful of pixel values. This time, when setting the input values, the "px" string will need to be removed.
 
 ```javascript
 const setValueFromLocalStorage = property => {
@@ -111,7 +111,7 @@ const setValueFromLocalStorage = property => {
     value
   );
 
-  const input = document.querySelector(`#${property}`);
+  const input = document.getElementById(property);
   input.value = value.replace('px', '');
 }
 
@@ -132,13 +132,11 @@ Now, I just need to call this function with the values I want to set on the appr
 
 ```javascript
 setTheme({
-  'background-color': '#2eec96',
-  'text-color': '#222222',
-  'label-color': '#1a905d',
-  'border-color': 'rgba(250, 250, 250, 0.5)'
+  'background-color': '#FFFFFF',
+  'text-color': '#101727',
+  'label-color': '#E77C00',
+  'border-color': '#D1D5DC'
 });
 ```
 
-CSS variables make live theming a piece of cake. Check out the [live experiment here](https://codepen.io/jonathanharrell/details/EdawEq). In a real-world app, you would probably want to store the theme options in user settings on the back-end. Hopefully this gets you started playing around with the fun things that CSS variables make possible.
-
-You can learn more about CSS variables in [my article here](/blog/unlocking-the-benefits-of-css-custom-properties/).
+CSS variables make live theming easy. Check out the [live experiment here](https://codepen.io/jonathanharrell/details/EdawEq). Hopefully this gets you started playing around with the fun things that CSS variables make possible. You can learn more about CSS variables in [my article here](/blog/unlocking-the-benefits-of-css-custom-properties/).
